--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             export GitHubName="Mohd Faraz"
             DIR=$(pwd) && echo $DIR
             echo "Make Up2date"
-            sudo apt-get -qqy update && sudo apt-get -qqy upgrade && sudo apt-get update && sudo apt-get --assume-yes install wget libstdc++6 software-properties-common && sudo apt-get update && sudo add-apt-repository ppa:openjdk-r/ppa -y && sudo apt-get update && sudo apt-get purge --auto-remove openjdk-7* -y && sudo apt-get install openjdk-8-jdk -y && sudo update-alternatives --config java && sudo apt-get install imagemagick
+            sudo apt-get -qqy update && sudo apt-get -qqy upgrade && sudo apt-get update && sudo apt-get --assume-yes install wget libstdc++6 software-properties-common && sudo apt-get update && sudo add-apt-repository ppa:openjdk-r/ppa -y && sudo apt-get update && sudo apt-get purge --auto-remove openjdk-7* -y && sudo apt-get install openjdk-8-jdk -y && sudo update-alternatives --config java && sudo apt-get install imagemagick -y
             echo "Setup all the prerequisites"
             PATH=~/bin:$PATH
             curl --create-dirs -L -o ~/bin/repo -O -L https://github.com/akhilnarang/repo/raw/master/repo
