--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,8 @@ jobs:
             wget https://qc1.androidfilehost.com/dl/AE1g4b91_1eqAYQi29xJgA/1571889180/11410932744536984820/lineage-16.0.tar.xz.aa
             wget https://qc1.androidfilehost.com/dl/Boi0nii1tMAwtCIcN57Nug/1571904162/11410932744536984818/lineage-16.0.tar.xz.ab
             wget https://qc1.androidfilehost.com/dl/XGvS_0JcoofwEpuU5T8Wkg/1571904225/11410932744536984819/lineage-16.0.tar.xz.ac
-            cat *.tar.xz* | tar -xvJf - 
+            cat *.tar.xz* | tar -xvJf -
+            rm -rf *.tar*
             cd lineage-16*
             echo "Clean up the .repo, no use of it"
             echo "Source Files are Here now"
