--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,10 @@ jobs:
             git clone https://github.com/AndroiableDroid/device_LYF_msm8916-common -b lineage-16.0 device/LYF/msm8916-common
             git clone https://github.com/AndroiableDroid/kernel -b binder kernel/LYF/mobee01a --depth=1
             git clone https://github.com/AndroiableDroid/vendor_LYF -b lineage-16.0 --depth=1 vendor/LYF
+            rm hardware/qcom/*f/msm8916
+            git clone https://github.com/AOSP-CAF-Project/hardware_qcom_audio-caf_msm8916 -b pie-caf hardware/qcom/audio-caf/msm8916
+            git clone https://github.com/AOSP-CAF-Project/hardware_qcom_media-caf_msm8916 -b pie-caf hardware/qcom/media-caf/msm8916
+            git clone https://github.com/AOSP-CAF-Project/hardware_qcom_display-caf_msm8916 -b pie-caf hardware/qcom/display-caf/msm8916
             echo "Start the Build Process"
             source build/envsetup.sh
             lunch lineage_mobee01a-userdebug
