--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,15 @@ jobs:
           name: AIO Build
           command: |
             echo "Initializing"
-            export MANIFEST_BRANCH="lineage-16.0"
+            export MANIFEST_BRANCH="android-9.0"
+            export PBRP_BRANCH="android-9.0"
+            export VERSION="2.9.0"
+            export VENDOR="realme"
+            export CODENAME="RMX1811"
+            export BUILD_LUNCH="omni_RMX1811-eng"
             DIR=$(pwd) && echo $DIR
             echo "Make Up2date"
-            sudo apt-get -qqy update && sudo apt-get -qqy upgrade && sudo apt-get update && sudo apt-get --assume-yes install wget libstdc++6 software-properties-common && sudo apt-get update && sudo add-apt-repository ppa:openjdk-r/ppa -y && sudo apt-get update && sudo apt-get purge --auto-remove openjdk-7* -y && sudo apt-get install openjdk-8-jdk -y && sudo update-alternatives --config java
+            sudo apt-get -qqy update && sudo apt-get -qqy upgrade && sudo apt-get update && sudo apt-get --assume-yes install wget libstdc++6 software-properties-common && sudo apt-get update && sudo add-apt-repository ppa:openjdk-r/ppa -y && sudo apt-get update && sudo apt-get purge --auto-remove openjdk* -y && sudo apt-get install openjdk-8-jdk -y && sudo update-alternatives --config java
             echo "Setup all the prerequisites"
             PATH=~/bin:$PATH
             curl --create-dirs -L -o ~/bin/repo -O -L https://github.com/akhilnarang/repo/raw/master/repo
@@ -36,25 +41,35 @@ jobs:
             git config --global color.ui true
             echo "Initialize & Sync PBRP repo"
             echo $(pwd)
-            repo init --depth=1 -q -u git://github.com/LineageOS/android.git -b ${MANIFEST_BRANCH}
-            shopt -s extglob
+            repo init --depth=1 -q -u git://github.com/PitchBlackRecoveryProject/manifest_pb.git -b ${MANIFEST_BRANCH}
             time repo sync -c -f -q --force-sync --no-clone-bundle --no-tags -j32
-            echo "Clean up the .repo, no use of it"
-            cp .repo/manifests/default.xml $(pwd)/default.xml
-            rm -rf .repo
             echo "Source Files are Here now"
             ls -la .
             echo "Get the Device Tree on place"
-            mkdir -p .repo/manifests && mv default.xml .repo/manifests/default.xml
-            git clone https://github.com/AndroiableDroid/device_LYF_mobee01a -b lineage-16.0 device/LYF/mobee01a
-            git clone https://github.com/AndroiableDroid/device_LYF_msm8916-common -b lineage-16.0 device/LYF/msm8916-common
-            git clone https://github.com/AndroiableDroid/kernel -b binder kernel/LYF/mobee01a --depth=1
-            git clone https://github.com/AndroiableDroid/vendor_LYF -b lineage-16.0 --depth=1 vendor/LYF
+            git clone https://PitchBlackRecoveryProect:$GITHUB_TOKEN@github.com/PitchBlackRecoveryProject/${CIRCLE_PROJECT_REPONAME} device/${VENDOR}/${CODENAME}
+            # Sync again, as Device has Dependencies
+            repo sync -c -f -q --force-sync --no-clone-bundle --no-tags -j32
+            # Keep the whole .repo/manifests folder
+            cp -a .repo/manifests $(pwd)/ && ls manifests/
+            echo "Clean up the .repo, no use of it now"
+            rm -rf .repo
+            mkdir -p .repo && mv manifests .repo/ && ls -la .repo/*
+            rm -rf bootable/recovery && git clone https://github.com/PitchBlackRecoveryProject/android_bootable_recovery -b ${PBRP_BRANCH} bootable/recovery
+            rm -rf vendor/pb && git clone https://github.com/PitchBlackRecoveryProject/vendor_pb -b pb vendor/pb
+            mkdir -p out/host/linux-x86/bin
+            wget -q https://github.com/hak86/mkbootimg/raw/master/mkbootimg -O out/host/linux-x86/bin/mkbootimg
+            wget -q https://github.com/hak86/mkbootimg/raw/master/mkbootfs -O out/host/linux-x86/bin/mkbootfs
+            wget -q https://github.com/hak86/mkbootimg/raw/master/mkboot -O out/host/linux-x86/bin/mkboot
             echo "Start the Build Process"
+            export ALLOW_MISSING_DEPENDENCIES=true
             source build/envsetup.sh
-            brunch mobee01a
+            lunch ${BUILD_LUNCH}
+            mkdir -p out/target/product/${CODENAME}/system/bin
+            wget -q https://raw.githubusercontent.com/Stock-firmware-dump/X00TD_dump/master/system/bin/adbd -O out/target/product/$CODENAME/system/bin/adbd
+            make -j16 recoveryimage
             echo "Deploying"
-            export BUILDFILE=$(find $(pwd)/out/target/product/${CODENAME}/lineage*.zip 2>/dev/null)
+            sudo chmod a+x vendor/pb/pb_deploy.sh && ./vendor/pb/pb_deploy.sh ${CODENAME} ${SFUserName} ${SFPassword} ${GITHUB_TOKEN}
+            export BUILDFILE=$(find $(pwd)/out/target/product/${CODENAME}/PitchBlack*.zip 2>/dev/null)
             ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ${BUILDFILE}
 workflows:
   version: 2
